--- a/NodeJs/package.json
+++ b/NodeJs/package.json
@@ -1,12 +1,12 @@
 {
   "name": "lets-safe-api",
-  "version": "1.0.10",
-  "description": "",
+  "version": "1.1.0",
+  "description": "NodeJs tenant referencing and credit check API",
   "main": "api.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
+  "author": "Lets Safe",
   "license": "ISC",
   "dependencies": {
     "request": "^2.81.0"
